--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "lucide-react": "^0.460.0",
+    "motion": "^11.11.17",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
